lib/stratiform/res/test/stratiform/corpus/pos/tabulation-second-replaces-first.tel
# Name  # Age
Alice   30
# X  # Y
foo  bar
