lib/stratiform/res/test/stratiform/corpus/neg/e119-column-value-too-wide.tel
# Key  # N  # Age
foo    ABCD  30
